[gd_scene load_steps=2 format=3 uid="uid://cvoteui123456789"]

[ext_resource type="Script" path="res://src/ui/voting_ui.gd" id="1_script"]

[node name="VotingUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="TopCenterContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
theme_override_constants/margin_top = 150

[node name="PopupPanel" type="PanelContainer" parent="TopCenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TopCenterContainer/PopupPanel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TopCenterContainer/PopupPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="TopCenterContainer/PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "IDENTIFICATION PROPOSED"
horizontal_alignment = 1

[node name="ProposalLabel" type="Label" parent="TopCenterContainer/PopupPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Player proposes: Entity"
horizontal_alignment = 1

[node name="VoteStatus" type="Label" parent="TopCenterContainer/PopupPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Approve: 0/2 needed | Reject: 0"
horizontal_alignment = 1

[node name="ButtonHBox" type="HBoxContainer" parent="TopCenterContainer/PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30

[node name="RejectButton" type="Button" parent="TopCenterContainer/PopupPanel/MarginContainer/VBoxContainer/ButtonHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Reject"

[node name="ApproveButton" type="Button" parent="TopCenterContainer/PopupPanel/MarginContainer/VBoxContainer/ButtonHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Approve"

[node name="WaitingLabel" type="Label" parent="TopCenterContainer/PopupPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Vote submitted - waiting for others..."
horizontal_alignment = 1
